--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "ajv-keywords": "^3.5.2",
     "bootstrap": "^5.1.1",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-chrono": "^1.12.1",
     "react-dark-mode-toggle": "^0.2.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-markdown": "^7.0.1",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.1",
@@ -44,7 +44,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "devDependencies": {
     "eslint": "^7.32.0",
