--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chrono": "^1.12.1",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-markdown": "^7.0.1",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.1",
